--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "cross-env": "^5.2.1",
+    "gh-pages": "^3.0.0",
     "react-hot-loader": "^4.12.21",
     "react-scripts": "^3.4.1"
   },
